update note about user models and profiles

--- a/_posts/2020-10-14-RS-3.md
+++ b/_posts/2020-10-14-RS-3.md
@@ -25,9 +25,9 @@ date: 2020-10-14
 1.  [Knowledge](#knowledge)  
 2.  [Interests](#interests) – came from recommender system, profile of the user
 3.  [Goals and tasks](#goals-and-tasks)  
-4.  [Background](#background)
-5.  Individual traits
-6.  Context of work more context adaptive
+4.  [Background](#background)  
+5.  [Individual traits](#individual-traits)  
+6.  [Context of work more context adaptive](#context-of-work-more-context-adaptive)
 
 
 ## 1.  **Knowledge**
@@ -145,9 +145,7 @@ date: 2020-10-14
 
 
   - Problem with the model
-      - Graphs are **complex** coz it has relationship + goes up. When u
-        pull external taxonomy, it could be very rich. So you need to
-        know how far up you'll go
+      - Graphs are **complex** coz it has relationship + goes up. When you pull external taxonomy, it could be very rich. So you need to know how far up you'll go
       - External source could be **noisy** and has **limited data**
       - Users don’t talk in terms of groups, and human settlement so if
         system starts using this it can be an **understanding
@@ -155,126 +153,79 @@ date: 2020-10-14
 
 
 ## 3.  **Goals and tasks**
-
-<!-- end list -->
   - ![image](https://user-images.githubusercontent.com/33334078/95707858-b1f1b400-0c95-11eb-832e-c40bb4375c3b.png)
   - Most challenging/ changeable as goal/ task recognition is difficult
-
   - Usually modelled with a ‘goal catalogue’
     approach (predefined list/ structure of user goals and tasks)
-
   - To mark users goal somewhere in the catalogue then activate
     appropriate adaption (e.g. a learning system, help system)
-
   - Have **goals** and **sub goals**, with a tree structure
-
-  - Challenge is to <span class="underline">find where the user is in
+  - Challenge is to <span style="text-decoration:underline">find where the user is in
     the goal map</span> and how far they’ve accomplished
 
   - **e.g. SQL tutor**
-
       - There's a simple goal on top and based on tasks users have
         accomplished, identify the user goal
 
 **Goals and tasks II**
   - ![image](https://user-images.githubusercontent.com/33334078/95707878-c03fd000-0c95-11eb-8138-18aec2a4bd33.png)
-
   - Using an overlay model with predefined goals or tasks
-
   - How to approximate that they’ve accomplished the goal?
-
       - Graphs or lists
-
   - Goal system with Bayesian network – and use some probabilities to
     except to what extent users have gone over the goals and sub goals
 
 **Exercise – transport guide**
-
   - Q - What will the user model look like if we want a ‘**transport
     guide’** software to adapt to the user when advising on
-    <span class="underline">how to get around in Yorkshire</span>?
-
+    <span style="text-decoration:underline">how to get around in Yorkshire</span>?
       - Goal – types of transport
-
           - Sub goal – tasks to use the transport
-
       - Goal – locations you wanna visit
-
           - Sub goal – how to get there
-
   - ![image](https://user-images.githubusercontent.com/33334078/95707895-cf268280-0c95-11eb-96cd-506d80e76ddd.png)
 
-<!-- end list -->
 
-4.  **Background**
-
-<!-- end list -->
-
-  - Relatively stable information about <span class="underline">their
+## 4.  **Background**
+  - Relatively stable information about <span style="text-decoration:underline">their
     previous experiences</span>
-
       - Profession, experience of work in related areas, opinions
-
       - Demographic information – name, age, sex, nationality
-
       - To put it in some form of category
-
   - Common to use user’s background for stereotype modelling (not
     overlay)
-
   - Challenge? Privacy \!\! hence not popular
 
-<!-- end list -->
 
-5.  **Individual traits**
-
-<!-- end list -->
-
+## 5.  **Individual traits**
   - Relatively stable characteristics of the user info which together
-    <span class="underline">define a user as an individual</span>
-
+    <span style="text-decoration:underline">define a user as an individual</span>
       - Characteristics such as cognitive styles, learning styles,
         personality etc
-
       - Can be based on psychometric tests
-
   - E.g. If someone is intrinsically or extrinsically motivated
-
       - Intrinsically – turn on values, e.g. if I do well my fam will do
         well
-
       - Extrinsically – just wanting awards
 
   - Personality model
-
       - E.g. Introvert, extrovert, fast thinker, future thinker
-
       - Personality is useful when: you are trying to convince someone.
         If they are future/ present thinker you recommend it but tweak it.
 
-<!-- end list -->
 
-6.  **Context of work**
-
-<!-- end list -->
-
+## 6.  **Context of work**
   - Context awareness is paramount for mobile devices
-
   - Is more like a holistic model
-
   - User model is more individual, but to personalise we need to know
     the individual AND **the world**
-
       - Hence contextual awareness
-
   - Early work started from platform adaptation issues, then has grown
     to mobile and ubiquitous adaptive systems
-
   - Now extending to other dimensions of the context such as:
 
       - **User location** – where is the user and what do I know about
         that. i.e noise level
-
           - E.g. Delivering video-based lecture I a mobile device and
             how long students are gonna consume the video. In a café,
             room, etc. It’s not a desktop app so we need to change sth.
@@ -290,104 +241,74 @@ date: 2020-10-14
       - **Affective s**tate – can we detect the mental state of the
         user. We can model with some approximation from i.e. user’s
         speech – positive and negative sentiment
-
           - Problem – what do we do after that. After we've found out if
             the user is happy or not, back to the application and how
             are we gonna change it?
 
   - You only bring one parameter of context each time
-
       - No social context and physical environment together, bc we don’t
         know how to deal with so many things
-
       - E.g. medicine – we don’t give handful of medicine we give pill
         by poll
-
       - We isolate parameter by parameter to see what works
-
   - \+ While not totally about the user, the addition of the context
     makes adaptation more effective
 
+
 **Dimensions of context**
-
   - ![image](https://user-images.githubusercontent.com/33334078/95707906-d8afea80-0c95-11eb-90f0-fd17ce0355a0.png)
-
   - Can take it from the context of the user (right) and see how far you
     can stretch further
-
       - **Task/ goal**
-
       - **Personal context** – interesting coz it can bring issues like
         disability, mobility and vision
-
       - **Social context** – anything about the time, location
-
       - Overall platform/ ecosystem
-
           - **Time/ location** - when, where, how long they’ve got
-
           - **Physical env** – noise? Dim?
+
 
   - OR take it from the context of the device (left) and see how far you
     can stretch further
-
       - Capability of the **device** – we use the performance of the
         device
-
           - E.g. smart watches – very limited screen, so need to be aware
             of that
-
       - **Environment context** – noise, pollution, movement, crowd
-
       - **Human context** – what are the influences that may affect the
         person?
-
   - Can start with something that is easy to capture and handle
     (task/goal, device) and you stretch further
 
+
   - Q - Personalised travel assistant – which context dimensions will
     you use? Past exam Q
-
       - From the **user model** – some demographic, **INTEREST** about
         places\! main thing
-
       - Personal context – mobility problems? (imp in this case)
-
           - If they have respiratory problem, it can affect it Rec
             becomes useless if they’ve got problems and it could rather
             remind them
-
       - Social context – who they are with, as they exhibit diff
         behaviours if they are going museum alone and when they are with
         someone else
-
       - Time location – when, where, how long they’ve got
 
+
 **An example of User model/ profile**
-
   - **Demographic -** Name, age, nationality, education level
-
   - **User interest -** List of key words, list of topics
-
   - **User preferences -** Disabilities, preferred interaction style,
     preferred media
 
-**Summary on user model representation (about 2 lectures)**
 
+**Summary on user model representation (about 2 lectures)**  
   - User model can include a range of parameters:
-
       - Knowledge, interests, goals and tasks, background, individual
         traits, context of work
-
   - In class
-
       - Overlaying with existing / external knowledge base
-
       - Different ways of representing a model – taxonomy, graph, table
-
       - Easy to model goals but is hard to find out whereabouts the user
         is in achieving that goal
-
   - User model is for **ADAPTATION**\!
-
-<!-- end list -->
