changed TOC issue

--- a/_posts/2020-10-14-RS-3.md
+++ b/_posts/2020-10-14-RS-3.md
@@ -22,12 +22,12 @@ date: 2020-10-14
 
 
 **What can be modelled in a user model/ user profile**
-1.  [Knowledge](#knowledge)  
-2.  [Interests](#interests) – came from recommender system, profile of the user
-3.  [Goals and tasks](#goals-and-tasks)  
-4.  [Background](#background)  
-5.  [Individual traits](#individual-traits)  
-6.  [Context of work more context adaptive](#context-of-work-more-context-adaptive)
+1.  [Knowledge](#1-knowledge)  
+2.  [Interests](#2-interests) – came from recommender system, profile of the user
+3.  [Goals and tasks](#3-goals-and-tasks)  
+4.  [Background](#4-background)  
+5.  [Individual traits](#5-individual-traits)  
+6.  [Context of work more context adaptive](#6-context-of-work-more-context-adaptive)
 
 
 ## 1.  **Knowledge**
