changed TOC issue

--- a/_posts/2020-10-14-RS-3.md
+++ b/_posts/2020-10-14-RS-3.md
@@ -10,9 +10,8 @@ date: 2020-10-14
 ## **User models and profiles (representation)**
 
 
-**User models – three broad questions**
+**User models – three broad questions**  
 ![image](https://user-images.githubusercontent.com/33334078/95707771-6808ce00-0c95-11eb-88f8-6af266cd7e40.png)
-
 1.  \*What is being modelled?
     - The nature of information
 2.  \*How is this information represented?
@@ -30,7 +29,7 @@ date: 2020-10-14
 6.  [Context of work more context adaptive](#6-context-of-work-more-context-adaptive)
 
 
-## 1.  **Knowledge**
+## 1. Knowledge
   - Most popular in learner modelling in adaptive education system, and
     could vary how we represent it.
   - We need to have a __domain of area__ we
@@ -88,7 +87,7 @@ date: 2020-10-14
 
 
 
-## 2.  **Interests**
+## 2. Interests
   - Most popular in information-oriented systems (e.g. recommendation
     system)
       - News rec, item rec, interesting travel guide
@@ -152,7 +151,7 @@ date: 2020-10-14
         challenging**
 
 
-## 3.  **Goals and tasks**
+## 3. Goals and tasks
   - ![image](https://user-images.githubusercontent.com/33334078/95707858-b1f1b400-0c95-11eb-832e-c40bb4375c3b.png)
   - Most challenging/ changeable as goal/ task recognition is difficult
   - Usually modelled with a ‘goal catalogue’
@@ -186,7 +185,7 @@ date: 2020-10-14
   - ![image](https://user-images.githubusercontent.com/33334078/95707895-cf268280-0c95-11eb-96cd-506d80e76ddd.png)
 
 
-## 4.  **Background**
+## 4. Background
   - Relatively stable information about <span style="text-decoration:underline">their
     previous experiences</span>
       - Profession, experience of work in related areas, opinions
@@ -197,7 +196,7 @@ date: 2020-10-14
   - Challenge? Privacy \!\! hence not popular
 
 
-## 5.  **Individual traits**
+## 5. Individual traits
   - Relatively stable characteristics of the user info which together
     <span style="text-decoration:underline">define a user as an individual</span>
       - Characteristics such as cognitive styles, learning styles,
@@ -214,7 +213,7 @@ date: 2020-10-14
         If they are future/ present thinker you recommend it but tweak it.
 
 
-## 6.  **Context of work**
+## 6. Context of work
   - Context awareness is paramount for mobile devices
   - Is more like a holistic model
   - User model is more individual, but to personalise we need to know
