Added 16'ths news about agricultural robot

--- a/_posts/2020-09-01-News-Sept.md
+++ b/_posts/2020-09-01-News-Sept.md
@@ -15,7 +15,8 @@ date: 2020-09-01
 5. [Musk's SpaceX wins Pentagon award for missile tracking satellites](#musk-s-space-x-wins-pentagon-award-for-missile-tracking-satellites)   
 6. [Microsoft takes action to resolve 365 services accessibility issues](#microsoft-takes-action-to-resolve-365-services-accessibility-issues)   
 7. [Twilio Set To Acquire Cloud Customer Data Startup Segment For $3.2 Billion](#twilio-set-to-acquire-cloud-customer-data-startup-segment-for-3-2-billion)    
-8. [Trends Continue to Push Processing to the Edge for AI](#trends-continue-to-push-processing-to-the-edge-for-ai)
+8. [Trends Continue to Push Processing to the Edge for AI](#trends-continue-to-push-processing-to-the-edge-for-ai)  
+9. [Google reveals Mineral crop-inspecting robots](#google-reveals-mineral-crop-inspecting-robots)  
 
 
 ## [September 1st, 2020]
@@ -145,6 +146,56 @@ date: 2020-09-01
 
 
 
+
+
+## [October 16th, 2020]
+
+##  Google reveals Mineral crop-inspecting robots
+- **Who:**  Google's parent company, Alphabet
+- **What:**  They have unveiled prototype robots that can inspect individual plants in a field, to help farmers improve crop yields.
+- **When:**  The development is on the go, but there is no explicit timeline or plan to release the buggy as a commercial product.
+- **Why:**  The team says its main goal is to address the world's increasing need for food and the sustainability of growing it - but the current tools dont allow farmers to do so.
+- **How:**  
+  - The robot buggies roll through fields on upright pillars, gathering high quality images of each plant and counting and classifying crops. It can also record information such as plant height, leaf area and fruit size.
+  - And all that data is plugged into a machine-learning system to try to spot patterns and insights useful to farmers.
+- **So?:**  It will be able to collect huge amounts of data about how crops grow. But the data security is essential at every step, Ian Drew, a technology company founder and chairman said, "because the last thing you want to do is have somebody hijack your farm".
+- [Link to the article](https://www.bbc.com/news/technology-54538849)
+
+
+## [October 14th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**
+- **How:**  
+- **So?:**
+- [Link to the article]()
+
+
+## [October 14th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**
+- **How:**  
+- **So?:**
+- [Link to the article]()
+
+
+## [October 14th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**
+- **How:**  
+- **So?:**
+- [Link to the article]()
 
 
 ## [October 14th, 2020]
