--- a/_posts/2020-10-14-RS-3.md
+++ b/_posts/2020-10-14-RS-3.md
@@ -11,7 +11,7 @@ date: 2020-10-14
 
 
 **User models – three broad questions**  
-![image](https://user-images.githubusercontent.com/33334078/95707771-6808ce00-0c95-11eb-88f8-6af266cd7e40.png)
+- ![image](https://user-images.githubusercontent.com/33334078/95707771-6808ce00-0c95-11eb-88f8-6af266cd7e40.png)
 1.  \*What is being modelled?
     - The nature of information
 2.  \*How is this information represented?
