Added 19th's news about US gov using AI for regulation update

--- a/_posts/2020-09-01-News-Sept.md
+++ b/_posts/2020-09-01-News-Sept.md
@@ -15,8 +15,10 @@ date: 2020-09-01
 5. [Musk's SpaceX wins Pentagon award for missile tracking satellites](#musk-s-space-x-wins-pentagon-award-for-missile-tracking-satellites)   
 6. [Microsoft takes action to resolve 365 services accessibility issues](#microsoft-takes-action-to-resolve-365-services-accessibility-issues)   
 7. [Twilio Set To Acquire Cloud Customer Data Startup Segment For $3.2 Billion](#twilio-set-to-acquire-cloud-customer-data-startup-segment-for-3-2-billion)    
-8. [Trends Continue to Push Processing to the Edge for AI](#trends-continue-to-push-processing-to-the-edge-for-ai)  
-9. [Google reveals Mineral crop-inspecting robots](#google-reveals-mineral-crop-inspecting-robots)  
+8. [Trends Continue to Push Processing to the Edge for AI](#trends-continue-to-push-processing-to-the-edge-for-ai)   
+9. [Google reveals Mineral crop-inspecting robots](#google-reveals-mineral-crop-inspecting-robots)   
+10. [U.S. government agencies to use AI to cull and cut outdated regulations](#u-s-government-agencies-to-use-ai-to-cull-and-cut-outdated-regulations)  
+
 
 
 ## [September 1st, 2020]
@@ -162,16 +164,17 @@ date: 2020-09-01
 - [Link to the article](https://www.bbc.com/news/technology-54538849)
 
 
-## [October 14th, 2020]
+## [October 19th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**
-- **How:**  
-- **So?:**
-- [Link to the article]()
+##  U.S. government agencies to use AI to cull and cut outdated regulations
+- **Who:**  The White House Office of Management and Budget
+- **What:**  They have stated that the federal agencies will use artificial intelligence to eliminate outdated, obsolete, and inconsistent requirements across government regulations.
+  - Participating agencies include the Transportation Department, the Agriculture Department, the Labor Department and the Interior Department.
+- **When:**  Friday, 16th of October, 2020
+- **Why:**  The AI effort would help agencies "update a regulatory code marked by decades of neglect and lack of reform."
+- **How:**  The General Services Administration will assist agencies in identifying technology partners and facilitate contracts. The details of the technology will be consulted with the technology partners.
+- **So?:**  Detecting outdated and obsolete codes across tens of thousands of pages of government regulations would be easier and faster using AI.
+- [Link to the article](https://www.reuters.com/article/us-usa-regulations-white-house/u-s-government-agencies-to-use-ai-to-cull-and-cut-outdated-regulations-idUSKBN27130L)
 
 
 ## [October 14th, 2020]
