Added books and changed name

--- a/_posts/2020-02-01-DS-0TOC.md
+++ b/_posts/2020-02-01-DS-0TOC.md
@@ -1,12 +1,16 @@
 ---
-title: "Table of Contents"
+title: "Distributed System - Table of Contents"
 tags: [Distributed Systems]
 categories:
   - Distributed Systems
 date: 2020-02-01
 ---
 
-# Table of Contents - Distrubuted Systems
+- In these series of notes, various aspects of distributed systems are covered.
+- The books referenced includes:
+  - Tanenbaum A & van Steen M, Distributed Systems: Principles & Paradigms, 3rd edition, PrenticeHall, 2017  
+  - Colouris G, Dollimore J & Kindberg T, Distributed Systems: Concepts and Design, 5th edition, Addison-Wesley, 2012  
+
 
 1.	[Introduction to Distributed Systems](https://chaerim-kim.github.io/distributed%20systems/DS-1/)
 2.	[Introduction to Distributed Systems II](https://chaerim-kim.github.io/distributed%20systems/DS-2/)
