RS note about user engagement modelling

--- a/_posts/2020-10-9-Python.md
+++ b/_posts/2020-10-9-Python.md
@@ -1,21 +1,23 @@
 ---
 title: "Python Functions"
-tags: [Daily News]
+tags: []
 categories:
-  - Daily News
+  -  
 date: 2020-10-09
 ---
 
 ## **Python Functions**
 
 1. [Enumerate](#Enumerate)   
+2. [List Comprehension](#list-comprehension)
 
 
-# Enumerate
-- (count, element) in enumerate (list)
+## Enumerate
 - **Enumerate** iterates through the list and also counts the current iteration.
+- **(count, element) in enumerate (list)**
 
-```
+
+```python
 # list object
 list = ['boo','bam','baa']   
 
@@ -23,7 +25,25 @@ for (count,element) in enumerate (list):
   print (count, element)
 ```
 
-Output:
+**Output**
 > 0, 'boo'  
 > 1, 'bam'  
 > 2, 'baa'  
+
+
+
+
+## List Comprehension
+- List comprehension is an elegant way to define and create lists based on existing lists.  
+- variable = [task for item in list]
+
+```Python
+# print number if condition is met
+number_list = [ x for x in range(20) if x % 2 == 0]
+print(number_list)     # [0, 2, 4, 6, 8, 10, 12, 14, 16, 18]
+```
+
+```Python
+# split the string into i-j
+res = [test_str[i: j] for i in range(len(test_str))  for j in range(i + 1, len(test_str) + 1)]
+```
