added 21st news about hacker's bitcoin donation

--- a/_posts/2020-09-01-News-Sept.md
+++ b/_posts/2020-09-01-News-Sept.md
@@ -18,7 +18,7 @@ date: 2020-09-01
 8. [Trends Continue to Push Processing to the Edge for AI](#trends-continue-to-push-processing-to-the-edge-for-ai)   
 9. [Google reveals Mineral crop-inspecting robots](#google-reveals-mineral-crop-inspecting-robots)   
 10. [U.S. government agencies to use AI to cull and cut outdated regulations](#u-s-government-agencies-to-use-ai-to-cull-and-cut-outdated-regulations)  
-
+11. [Mysterious 'Robin Hood' hackers donating stolen money](#mysterious-robin-hood-hackers-donating-stolen-money)
 
 
 ## [September 1st, 2020]
@@ -177,16 +177,21 @@ date: 2020-09-01
 - [Link to the article](https://www.reuters.com/article/us-usa-regulations-white-house/u-s-government-agencies-to-use-ai-to-cull-and-cut-outdated-regulations-idUSKBN27130L)
 
 
-## [October 14th, 2020]
+## [October 21th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**
-- **How:**  
-- **So?:**
-- [Link to the article]()
+##  Mysterious 'Robin Hood' hackers donating stolen money
+- **Who:**  A hacking group
+- **What:**  A hacking group is donating stolen money to charity in what is seen as a mysterious first for cyber-crime. In a post on the dark web, the gang posted receipts for $10,000 in Bitcoin donations to two charities - Children International an The Water Project
+- **When:**  13th of October, 2020
+- **Why:**  
+  - Darkside hackers claim to have extorted millions of dollars from companies, but say they now want to "make the world a better place".
+  - Cyber-security analysts say that the intention of the hacking is unclear - maybe to assuage their guilt, or perhaps they want to be perceived as Robin Hood-like characters.  
+- **How:**   The hackers claim they only target large profitable companies with their ransomware attacks. The attacks hold organisations' IT systems hostage until a ransom is paid.
+  - They have used a US-based service called The Giving Block, which provides tax incentives by accepting crypto-currency donations.
+- **So?:**  
+  - The charity, Children International has no intention of keeping the donation if it is linked to a hacker. Moreover, the Water Project, which works to improve access to clean water in sub-Saharan Africa, has not responded to requests for comment.
+  - The Giving Block, which is also an advocate for crypto-currencies, added: "The fact they used crypto will make it easier, not harder, to catch them."
+- [Link to the article](https://www.bbc.com/news/technology-54591761)
 
 
 ## [October 14th, 2020]
