Added 23rd's news about whatsapp's new message and purchase features

--- a/_posts/2020-09-01-News-Sept.md
+++ b/_posts/2020-09-01-News-Sept.md
@@ -19,6 +19,7 @@ date: 2020-09-01
 9. [Google reveals Mineral crop-inspecting robots](#google-reveals-mineral-crop-inspecting-robots)   
 10. [U.S. government agencies to use AI to cull and cut outdated regulations](#u-s-government-agencies-to-use-ai-to-cull-and-cut-outdated-regulations)  
 11. [Mysterious 'Robin Hood' hackers donating stolen money](#mysterious-robin-hood-hackers-donating-stolen-money)
+12. [WhatsApp to offer in-app purchases, cloud hosting services](#whats-app-to-offer-in-app-purchases-cloud-hosting-services)
 
 
 ## [September 1st, 2020]
@@ -194,25 +195,63 @@ date: 2020-09-01
 - [Link to the article](https://www.bbc.com/news/technology-54591761)
 
 
-## [October 14th, 2020]
+## [October 23rd, 2020]
+
+##  WhatsApp to offer in-app purchases, cloud hosting services
+- **Who:**  Facebook Incorporation's WhatsApp
+- **What:**  They would start to offer in-app purchases and hosing services
+- **When:**  This year and 2021
+- **Why:**  As the company moves to boost revenue from the app while knitting together e-commerce infrastructure across the company.
+- **How:**  
+  - WhatsApp will enable businesses sell products within the app via Facebook Shops - an online store.
+  - It will also enter  the cloud computing sector, offering firms who use its customer service messaging tools the ability to store those messages on FB servers. - This would be free to try out, then it would charge 0.5 cents to 9 cents per message delivered.
+- **So?:**  The shopping tool would start rolling out this year, while message hosting would become available in 2021. The conversations are stored elsewhere and not protected by the app’s end-to-end encryption.
+- [Link to the article](https://www.reuters.com/article/us-facebook-whatsapp-ecommerce/whatsapp-to-offer-in-app-purchases-cloud-hosting-services-idUSKBN2771W9)
+
+
+## [October 25th, 2020]
 
 ##  
 - **Who:**  
-- **What:**
+- **What:**  
 - **When:**  
-- **Why:**
+- **Why:**  
 - **How:**  
-- **So?:**
+- **So?:**  
 - [Link to the article]()
 
 
-## [October 14th, 2020]
+## [October 27th, 2020]
 
 ##  
 - **Who:**  
-- **What:**
+- **What:**  
 - **When:**  
-- **Why:**
+- **Why:**  
 - **How:**  
-- **So?:**
+- **So?:**  
+- [Link to the article]()
+
+
+## [October 29th, 2020]
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()
+
+
+## [October 25th, 2020]
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
 - [Link to the article]()
