Added info about counter

--- a/_posts/2020-10-9-Python.md
+++ b/_posts/2020-10-9-Python.md
@@ -8,8 +8,9 @@ date: 2020-10-09
 
 ## **Python Functions**
 
-1. [Enumerate](#Enumerate)   
-2. [List Comprehension](#list-comprehension)
+1. [Enumerate](#enumerate)   
+2. [List Comprehension](#list-comprehension)  
+3. [Counter](#counter)
 
 
 ## Enumerate
@@ -46,4 +47,28 @@ print(number_list)     # [0, 2, 4, 6, 8, 10, 12, 14, 16, 18]
 ```Python
 # split the string into i-j
 res = [test_str[i: j] for i in range(len(test_str))  for j in range(i + 1, len(test_str) + 1)]
+```
+
+
+## Counter
+- Counts the occurences in the string -  an unordered collection.
+- elements() returns the list of elements in the counter. Only elements with positive counts are returned.
+
+```Python
+c1 = Counter(string)
+print (c1)
+# Counter({'a': 2, 'b': 2, 'c': 2, 'd': 1})
+
+# printing all elements
+l1 = list(Counter(s).elements())
+print (l1)
+# ['a', 'a', 'b', 'b', 'c', 'c', 'd']
+
+# printing key,value
+for k,v in c1.items():
+    print(k,v)
+# a 2
+# b 2
+# c 2
+# d 1
 ```
