updated 9th's news about cloud technology trends

--- a/_posts/2020-11-01-News-Nov.md
+++ b/_posts/2020-11-01-News-Nov.md
@@ -9,6 +9,7 @@ date: 2020-11-01
 ## **November's Technology Updates**
 
 1. [Walmart drops plans to use robots for tracking inventory](#walmart-drops-plans-to-use-robots-for-tracking-inventory)   
+2. [The 5 Biggest Cloud Computing Trends In 2021](#the-5-biggest-cloud-computing-trends-in-2021)  
 
 
 ## [November 3rd, 2020]
@@ -25,16 +26,27 @@ date: 2020-11-01
 - [Link to the article](https://www.reuters.com/article/us-walmart-robots/walmart-drops-plans-to-use-robots-for-tracking-inventory-idUSKBN27I2MU)
 
 
-## [November 1st, 2020]
+## [November 9th, 2020]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()
+##  The 5 Biggest Cloud Computing Trends In 2021
+- **Author:**  Bernard Marr
+- **What:**
+1. Multi-cloud approaches will lead to a breakdown of barriers between providers
+  - Currently the big cloud providers take a walled-garden approach to the service they provide. However, the industry is increasingly turning to hybrid or multi-cloud environments, meaning that the bridges between their platforms are to be made for a collaborative approach.
+
+2. AI will improve the efficiency and speed of cloud computing
+  - AI is a key enabler of technology's adaptation to our needs. AI is where the effects of smarter algorithms delivered through cloud services will be felt - such as image recognition tools, language processing, recommendation tools, cooling systems and etc.
+
+3. Gaming will be increasingly delivered from the cloud, just like music and movies
+  - Tech giants and startups started offering their own platform for cloud gaming, which revolutionizes the way we consume entertainment media by offering instant access to vast libraries of games that can be played for a monthly subscription.  
+
+4. Hybrid and on-premise cloud solutions grow in popularity
+  - Choosing between a public, private, or hybrid cloud environment has proved challenging for some organizations. The providers have woken up to the need for different platforms and approaches within organizations – e.g. utilizing public cloud to provide content delivery while storing and processing customer data and other controlled information via private or on-premise solutions.
+
+5. More of us will be working on Virtual Cloud Desktops
+  - The service where the entire environment of our workstation is delivered as a managed cloud service to our laptop or desktop screen where we work - a.k.a desktop-as-a-service.
+  - Organizations can take advantage of by-the-hour subscriptions for the time their employees spend working at their machines, reducing the cost of redundant technology.
+- [Link to the article](https://www.forbes.com/sites/bernardmarr/2020/11/02/the-5-biggest-cloud-computing-trends-in-2021/?sh=64c0241512d9)
 
 
 ## [November 1st, 2020]
