added 11th's news about DeFi hacks

--- a/_posts/2020-11-01-News-Nov.md
+++ b/_posts/2020-11-01-News-Nov.md
@@ -9,7 +9,9 @@ date: 2020-11-01
 ## **November's Technology Updates**
 
 1. [Walmart drops plans to use robots for tracking inventory](#walmart-drops-plans-to-use-robots-for-tracking-inventory)   
-2. [The 5 Biggest Cloud Computing Trends In 2021](#the-5-biggest-cloud-computing-trends-in-2021)  
+2. [The 5 Biggest Cloud Computing Trends In 2021](#the-5-biggest-cloud-computing-trends-in-2021)   
+3. [Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise-cipher-trace-report)   
+
 
 
 ## [November 3rd, 2020]
@@ -49,16 +51,17 @@ date: 2020-11-01
 - [Link to the article](https://www.forbes.com/sites/bernardmarr/2020/11/02/the-5-biggest-cloud-computing-trends-in-2021/?sh=64c0241512d9)
 
 
-## [November 1st, 2020]
+## [November 11th, 2020]
 
-##  
-- **Who:**  
+##  Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report
+- **Who:**  A report from crypto intelligence company CipherTrace
 - **What:**  
-- **When:**  
-- **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()
+  - Have said that the loss from cryptocurrecny thefts and hacks have declined to $1.8 billion compared with last year, but crimes from the "decentralized finance" sector rose.
+  -  DeFi stands for “decentralized finance”, which are transactions on platforms that facilitate lending outside of banks.
+- **Why:**  The cryptocurrency players have implemented more security procedures regarding crypto crimes - therefore about 20% of the crimes came from DeFi. The surge in DeFi was what ultimately attracted criminal hackers, resulting in the most hacks for the sector this year.
+- **How:**  Companies and individuals have rushed DeFi products to market that have not gone through security verification and validation, hence, the weaknesses are showing.
+- **So?:**  DeFi networks need to gain permission to clearly meet the regulatory compliance - this way, people will need customer verification, leading to less problems rising due to its permissionless design.
+- [Link to the article](https://www.reuters.com/article/us-crypto-currencies-crime/crypto-crime-slows-in-2020-but-defi-hacks-rise-ciphertrace-report-idUSKBN27Q29N)
 
 
 
