Edited BST explantaion

--- a/_posts/2020-09-07-Int-Jazz1.md
+++ b/_posts/2020-09-07-Int-Jazz1.md
@@ -34,8 +34,9 @@ date: 2020-09-07
 
 ### Binary Search Tree
 - Each node contains **one** key (also known as data)
-- The keys in the **left subtree are less then the key in its parent node**, in short L < P;
+- The **left nodes are less then the root node, and less than all of the right nodes**, in short L < P;
   - 10 > 6, 4, 8
+  - To search a key in the tree, always compare it with the parent node - if key is smaller than parent, go to left. If larger, go to right.
 - The keys in the **right subtree are greater the key in its parent node**, in short P < R;
   - 10 < 18, 15, 21
 - ![image](https://user-images.githubusercontent.com/33334078/92438810-81c17c00-f1e4-11ea-8572-29d99837b1e5.png)
@@ -54,7 +55,10 @@ date: 2020-09-07
 
 
 ### Algorithm 1. Tree traversal
-- Traverse the tree from the root, to the left and the right sub-tree (Pre-order - root, left, right)
+- **InOrder Traversal** : Left then root then right
+- **PreOrder Traversal** : Root then left then right
+- **PostOrder Traversal** : Left then right then root
+- Here we use Pre-Order traversal - Traverse the tree from the root, to the left and the right sub-tree 
 - **Steps**
   1. Visit the root
   2. Traverse the left subtree  
