Fixed toc clicking issue

--- a/_posts/2020-11-11-RS-9.md
+++ b/_posts/2020-11-11-RS-9.md
@@ -64,7 +64,7 @@ date: 2020-11-11
       - How you process the input data to come up w the user
 
 
-#### Step 1 – Represent input data
+#### Step 1 - Represent input data
   - ![image](https://user-images.githubusercontent.com/33334078/95708811-2d546500-0c98-11eb-899b-012da6a0fed5.png)
   - First step is to **prepare the input data** – usually a matrix.
       - Have all the possible items and users of the system – matrix
@@ -88,7 +88,7 @@ date: 2020-11-11
     for an unknown cell?
 
 
-#### Step 2 – Find nearest neighbours
+#### Step 2 - Find nearest neighbours
   - We need to find similarities across the users and then define the
     **neighbours** that are the most similar
   - How to find similarity → **cosine similarity**
@@ -221,7 +221,7 @@ date: 2020-11-11
       - \+ when the user item is big, its very fast
 
 
-### E.g. Amazon item-item collaborative filtering – to address scalability
+### E.g. Amazon item-item collaborative filtering - to address scalability
   - ![image](https://user-images.githubusercontent.com/33334078/95709061-cdaa8980-0c98-11eb-8d91-b56041a3cc14.png)
   - With this sparse data, instead of doing the whole calculation
   - No need to do multiplications of 0.
