Added 13th's news about greener Daimler

--- a/_posts/2020-11-01-News-Nov.md
+++ b/_posts/2020-11-01-News-Nov.md
@@ -11,7 +11,7 @@ date: 2020-11-01
 1. [Walmart drops plans to use robots for tracking inventory](#walmart-drops-plans-to-use-robots-for-tracking-inventory)   
 2. [The 5 Biggest Cloud Computing Trends In 2021](#the-5-biggest-cloud-computing-trends-in-2021)   
 3. [Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise-cipher-trace-report)   
-
+4. [Daimler will shrink with shift to electric, autonomous cars](#daimler-will-shrink-with-shift-to-electric-autonomous-cars)   
 
 
 ## [November 3rd, 2020]
@@ -65,6 +65,23 @@ date: 2020-11-01
 
 
 
+## [November 13th, 2020]
+
+##  Daimler will shrink with shift to electric, autonomous cars
+- **Who:**  Daimler, a German automotive engineering company.
+- **What:**  They plan on reducing the company size to focus on capturing recurring revenues with software-based services.
+- **When:**  It will unveil a new vehicle car operating system in 2024.
+- **Why:**  
+  - As EU regulation imposes carmakers to [drop the CO2 emission to 95g /km by 2020-2021](https://www.brusselstimes.com/news/eu-affairs/60725/car-makers-turn-electric-as-european-regulations-kick-in/) & to benefit from German government's [tax incentives for low emission cars](https://www.cleanenergywire.org/news/new-cars-germany-becoming-greener-not-green-enough).
+  - In addition, the change makes Daimler fit with a new era where luxury no longer defines itself through opulence and excess but also through sustainability and efficiency.
+- **How:**  
+  - The company will invest in digital tech, such as developing a new OS that includes sofware-based functionalities where services can be updated; so that it can make money with new sources of revenue.
+  - They are hiring a lot of new software engineers, experts in battery chemistry and electrification for the new drive.
+- **So?:**  It will result in job losses as electric car takes less time to build than a conventional version.
+- [Link to the article](https://www.reuters.com/article/idUSKBN27S2QA)
+
+
+
 ## [November 1st, 2020]
 
 ##  
@@ -76,6 +93,29 @@ date: 2020-11-01
 - **So?:**  
 - [Link to the article]()
 
+
+## [November 1st, 2020]
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()
+
+
+## [November 1st, 2020]
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()
 
 
 ## [November 1st, 2020]
