Changed the title of the file

--- a/_posts/2020-11-11-RS-9.md
+++ b/_posts/2020-11-11-RS-9.md
@@ -1,5 +1,5 @@
 ---
-title: "Recommender systems (Part 1) – Content-based Recommenders"
+title: "Recommender systems (Part 2) – Collaborative filtering"
 tags: [Recommender Systems]
 categories:
   - Recommender Systems
