Fixed header style

--- a/_posts/2020-11-11-RS-9.md
+++ b/_posts/2020-11-11-RS-9.md
@@ -64,7 +64,7 @@ date: 2020-11-11
       - How you process the input data to come up w the user
 
 
-#### Step 1 - Represent input data
+### Step 1 - Represent input data
   - ![image](https://user-images.githubusercontent.com/33334078/95708811-2d546500-0c98-11eb-899b-012da6a0fed5.png)
   - First step is to **prepare the input data** – usually a matrix.
       - Have all the possible items and users of the system – matrix
@@ -88,7 +88,7 @@ date: 2020-11-11
     for an unknown cell?
 
 
-#### Step 2 - Find nearest neighbours
+### Step 2 - Find nearest neighbours
   - We need to find similarities across the users and then define the
     **neighbours** that are the most similar
   - How to find similarity → **cosine similarity**
@@ -119,7 +119,7 @@ date: 2020-11-11
       - 0.93, 0.71 and 0.63 is the most relevant, U6,U4,U1
   - Problem is when there's too many 0’s and there's no similarity
 
-#### Step 3 - Predictions/ recommendations
+### Step 3 - Predictions/ recommendations
   - Now I know who the relevant user is, and we decide on the value.
     make predictions about the user
   - Q - I know we’ll take 0,2, and 4 (from prev. slide) do we take the
